# syncspark

./: .clang-format  .gitignore  README.md  partitions.csv  sdkconfig.defaults
LICENSES/: CERN-OHL-S-2.0.txt  README.md
components/bmp388/: CMakeLists.txt
components/bmp388/include/: bmp388.h
components/bmp388/src/: bmp388.c
components/drv5033/: CMakeLists.txt  README.md
components/drv5033/include/: drv5033.h
components/drv5033/src/: drv5033.c
components/drv8830/: CMakeLists.txt
components/drv8830/include/: drv8830.h
components/drv8830/src/: drv8830.c
components/esp32_chip_info/: CMakeLists.txt
components/esp32_chip_info/include/: esp32_chip_info.h
components/esp32_chip_info/src/: esp32_chip_info.c
components/esp32cam_leds/: CMakeLists.txt
components/esp32cam_leds/include/: esp32cam_leds.h
components/esp32cam_leds/src/: esp32cam_leds.c
components/esp32cam_ov2640/: CMakeLists.txt
components/esp32cam_ov2640/include/: esp32cam_ov2640.h
components/esp32cam_ov2640/src/: esp32cam_ov2640.c
components/fusion_ahrs/: CMakeLists.txt
components/fusion_ahrs/include/: fusion_ahrs.h  fusion_interface.h
components/fusion_ahrs/src/: fusion_ahrs.c  fusion_interface.c
components/icm20948/: CMakeLists.txt
components/icm20948/include/: icm20948.h
components/icm20948/src/: icm20948.c
components/matrix_utils/: CMakeLists.txt
components/matrix_utils/include/: matrix_utils.h
components/matrix_utils/src/: matrix_utils.c
components/mqtt_handler/: CMakeLists.txt
components/mqtt_handler/include/: mqtt_handler.h
components/mqtt_handler/src/: mqtt_handler.c
components/nvs_utils/: CMakeLists.txt
components/nvs_utils/include/: nvs_utils.h
components/nvs_utils/src/: nvs_utils.c
components/ota_utils/: CMakeLists.txt
components/ota_utils/include/: ota_utils.h
components/ota_utils/src/: ota_utils.c
components/rgb_led_ring/: CMakeLists.txt
components/rgb_led_ring/include/: rgb_led_ring.h
components/rgb_led_ring/src/: rgb_led_ring.c
components/syncspark_config/: CMakeLists.txt
components/syncspark_config/include/: network_config.h.template  syncspark_config.h  wifi_credentials.h.template
components/syncspark_config/src/: syncspark_config.c
components/sys_utils/: CMakeLists.txt
components/sys_utils/include/: sys_utils.h
components/sys_utils/src/: sys_utils.c
components/vision/: CMakeLists.txt  README.md
components/vision/include/: vision.h
components/vision/src/: vision.c
components/wifi_net/: CMakeLists.txt  README.md
components/wifi_net/include/: wifi_net.h
components/wifi_net/src/: wifi_net.c
docs/hardware/: README.md
docs/hardware/cam_back_board/: bom_cam_back_board.xlsx
docs/hardware/circle_board/: bom_circle_board.xlsx
docs/hardware/mechanical/: README.md  ball_castor_raiser.stl  battery_holder_4aa_v2_a.stl  magnet_holder_disk.stl  master_bom.xlsx  spl_spark_batt_base_standoffs.stl  spl_spark_cam_base_a.stl
docs/hardware/mechanical/bambu_lab_h2d_pro/: ball_castor_raiser.gcode.3mf  battery_holder_4aa_v2_a.gcode.3mf  magnet_holder_disk.gcode.3mf  spl_spark_batt_base_standoffs.gcode.3mf  spl_spark_cam_base_a.gcode.3mf  spl_sparknode_full_set.3mf  spl_sparknode_full_set.gcode.3mf
docs/hardware/sensor_board/: pcb_holes_and_borders_sensor_board.dxf
docs/software/: about_sdkconfig.md  mqtt.md  ota.md
get_esp32_chip_info/: CMakeLists.txt  README.md
get_esp32_chip_info/main/: CMakeLists.txt  get_esp32_chip_info.c
glow_ledring/: CMakeLists.txt  README.md  sdkconfig.defaults
glow_ledring/main/: CMakeLists.txt  glow_ledring.c
scenarios/: drive_forward_reverse.sh  mqtt_sequence.sh  path_polygon.sh  path_random_walk.sh  path_square.sh  test_turns.sh  turn_with_imu.sh  turn_with_stops.sh
sparkcore/: CMakeLists.txt  README.md
sparkcore/main/: CMakeLists.txt  sparkcore.c
sparkeye/: README.md
sparknode_cam_wifi/: CMakeLists.txt  README.md  partitions.csv  rcv_frames_udp.py
sparknode_cam_wifi/main/: CMakeLists.txt  sparknode_cam_wifi.c
sparknode_drive_test/: CMakeLists.txt  README.md
sparknode_drive_test/main/: CMakeLists.txt  sparknode_drive_test.c
sparknode_i2c_test/: CMakeLists.txt  README.md
sparknode_i2c_test/docs/: README.md
sparknode_i2c_test/main/: CMakeLists.txt  camera_platform.c.old  camera_platform.h.old  sparknode_i2c_test.c
sparknode_icm20948/: CMakeLists.txt  README.md  log.sparknode_icm20948.20250813212857.txt  log.sparknode_icm20948.20250814125409.txt  log.sparknode_icm20948.20250821140518.txt
sparknode_icm20948/main/: CMakeLists.txt  sparknode_icm20948.c
sparknode_ledring/: CMakeLists.txt  README.md
sparknode_ledring/main/: CMakeLists.txt  sparknode_ledring.c
sparknode_mqtt/: CMakeLists.txt  README.md  commands.txt
sparknode_mqtt/main/: CMakeLists.txt  sparknode_mqtt.c
sparknode_ota_updater/: CMakeLists.txt  README.md
sparknode_ota_updater/main/: CMakeLists.txt  sparknode_ota_updater.c
sparknode_sample_ota_app/: CMakeLists.txt  README.md
sparknode_sample_ota_app/main/: CMakeLists.txt  sparknode_sample_ota_app.c
system/utilities/: gen_debruijn_4c_128.py  launch_arena_tools.sh  log_listener.py  log_listener.py.old  prep_ota_bin.sh  verify_debruijn_windows.c
tools/: README.md  mag_calibrate_3d_all_in_one.py  mag_capture_to_csv.py  mqtt_orientation_viewer.py  plot_heading_vs_euler.py
